--- a/src/SampleTopshelfService/packages.config
+++ b/src/SampleTopshelfService/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="log4net" version="2.0.4" targetFramework="net40" requireReinstallation="true" />
+  <package id="log4net" version="2.0.5" targetFramework="net452" />
 </packages>
