--- a/src/Topshelf.NLog/packages.config
+++ b/src/Topshelf.NLog/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NLog" version="4.2.2" targetFramework="net40" requireReinstallation="true" />
+  <package id="NLog" version="4.3.3" targetFramework="net452" />
 </packages>
