--- a/src/Topshelf.Serilog/packages.config
+++ b/src/Topshelf.Serilog/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Serilog" version="1.5.14" targetFramework="net40" allowedVersions="[1,2)" requireReinstallation="true" />
+  <package id="Serilog" version="1.5.14" targetFramework="net452" />
 </packages>
