Fixed strong naming which was missing from Topshelf v4

--- a/src/.nuget/NuGet.targets
+++ b/src/.nuget/NuGet.targets
@@ -20,6 +20,7 @@
         <!-- Package sources used to restore packages. By default, registered sources under %APPDATA%\NuGet\NuGet.Config will be used -->
         <!-- The official NuGet package source (https://www.nuget.org/api/v2/) will be excluded if package sources are specified and it does not appear in the list -->
             <PackageSource Include="https://www.nuget.org/api/v2/" />
+            <PackageSource Include="https://api.nuget.org/v3/index.json" />
         <!--
             <PackageSource Include="https://my-nuget-source/nuget/" />
         -->
