--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -229,9 +229,11 @@
     <Compile Include="Runtime\Windows\WindowsUserAccessControl.cs" />
     <Compile Include="ServiceControl.cs" />
     <Compile Include="ServiceCustomCommand.cs" />
+    <Compile Include="ServicePowerEvent.cs" />
     <Compile Include="ServiceSessionChange.cs" />
     <Compile Include="ServiceShutdown.cs" />
     <Compile Include="ServiceSuspend.cs" />
+    <Compile Include="PowerEventArguments.cs" />
     <Compile Include="SessionChangedArguments.cs" />
     <Compile Include="SessionChangeReasonCode.cs" />
     <Compile Include="TopshelfExitCode.cs" />
