--- a/src/Topshelf.Tests/packages.config
+++ b/src/Topshelf.Tests/packages.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NUnit" version="2.6.4" targetFramework="net452" />
-  <package id="NUnit.Runners" version="2.6.4" targetFramework="net452" />
+  <package id="NUnit" version="3.5.0" targetFramework="net452" />
+  <package id="NUnit.ConsoleRunner" version="3.5.0" targetFramework="net452" />
+  <package id="NUnit.Extension.NUnitProjectLoader" version="3.5.0" targetFramework="net452" />
+  <package id="NUnit.Extension.NUnitV2Driver" version="3.5.0" targetFramework="net452" />
+  <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.5.0" targetFramework="net452" />
+  <package id="NUnit.Extension.TeamCityEventListener" version="1.0.2" targetFramework="net452" />
+  <package id="NUnit.Extension.VSProjectLoader" version="3.5.0" targetFramework="net452" />
+  <package id="NUnit.Runners" version="3.5.0" targetFramework="net452" />
 </packages>
