--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -1,256 +1,24 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{A52AD64D-6455-4A22-8CCF-581851086578}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Topshelf</RootNamespace>
-    <AssemblyName>Topshelf</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <TargetFrameworks>net452</TargetFrameworks>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <NoWarn>3001,3009</NoWarn>
-    <Prefer32Bit>false</Prefer32Bit>
-    <DocumentationFile>bin\Debug\Topshelf.XML</DocumentationFile>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <NoWarn>3001,3009</NoWarn>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <SignAssembly>true</SignAssembly>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <DebugType>portable</DebugType>
     <AssemblyOriginatorKeyFile>..\..\Topshelf.snk</AssemblyOriginatorKeyFile>
-    <DocumentationFile>bin\Release\Topshelf.XML</DocumentationFile>
+    <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\Topshelf.xml</DocumentationFile>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
+    <DefineConstants>$(DefineConstants);NETCORE</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Configuration.Install" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.ServiceProcess" />
+    <Reference Include="System"/>
+    <Reference Include="System.Core"/>
+  </ItemGroup>
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net452' ">
+    <Reference Include="System.Configuration.Install"/>
+    <Reference Include="System.ServiceProcess"/>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\SolutionVersion.cs">
-      <Link>Properties\SolutionVersion.cs</Link>
-    </Compile>
-    <Compile Include="Caching\Cache.cs" />
-    <Compile Include="Caching\CacheItemCallback.cs" />
-    <Compile Include="Caching\ConcurrentCache.cs" />
-    <Compile Include="Caching\DictionaryCache.cs" />
-    <Compile Include="Caching\GenericTypeCache.cs" />
-    <Compile Include="Caching\KeySelector.cs" />
-    <Compile Include="Caching\MissingValueProvider.cs" />
-    <Compile Include="Caching\ReadCache.cs" />
-    <Compile Include="Configuration\Builders\CommandBuilder.cs" />
-    <Compile Include="Configuration\Builders\ControlServiceBuilder.cs" />
-    <Compile Include="Configuration\Builders\DelegateServiceBuilder.cs" />
-    <Compile Include="Configuration\Builders\EnvironmentBuilder.cs" />
-    <Compile Include="Configuration\Builders\HelpBuilder.cs" />
-    <Compile Include="Configuration\Builders\HostBuilder.cs" />
-    <Compile Include="Configuration\Builders\InstallBuilder.cs" />
-    <Compile Include="Configuration\Builders\RunBuilder.cs" />
-    <Compile Include="Configuration\Builders\ServiceBuilder.cs" />
-    <Compile Include="Configuration\Builders\StartBuilder.cs" />
-    <Compile Include="Configuration\Builders\StopBuilder.cs" />
-    <Compile Include="Configuration\Builders\TestBuilder.cs" />
-    <Compile Include="Configuration\Builders\UninstallBuilder.cs" />
-    <Compile Include="Configuration\CommandLineParser\AbstractParser.cs" />
-    <Compile Include="Configuration\CommandLineParser\ArgumentElement.cs" />
-    <Compile Include="Configuration\CommandLineParser\CommandLine.cs" />
-    <Compile Include="Configuration\CommandLineParser\CommandLineElementParser.cs" />
-    <Compile Include="Configuration\CommandLineParser\DefinitionElement.cs" />
-    <Compile Include="Configuration\CommandLineParser\ExtensionForCommandLineElementParsers.cs" />
-    <Compile Include="Configuration\CommandLineParser\IArgumentElement.cs" />
-    <Compile Include="Configuration\CommandLineParser\ICommandLineElement.cs" />
-    <Compile Include="Configuration\CommandLineParser\ICommandLineElementParser.cs" />
-    <Compile Include="Configuration\CommandLineParser\IDefinitionElement.cs" />
-    <Compile Include="Configuration\CommandLineParser\ISwitchElement.cs" />
-    <Compile Include="Configuration\CommandLineParser\ITokenElement.cs" />
-    <Compile Include="Configuration\CommandLineParser\MonadParserExtensions.cs" />
-    <Compile Include="Configuration\CommandLineParser\Parser.cs" />
-    <Compile Include="Configuration\CommandLineParser\Result.cs" />
-    <Compile Include="Configuration\CommandLineParser\StringCommandLineParser.cs" />
-    <Compile Include="Configuration\CommandLineParser\SwitchElement.cs" />
-    <Compile Include="Configuration\CommandLineParser\TokenElement.cs" />
-    <Compile Include="Configuration\HostConfiguratorExtensions.cs" />
-    <Compile Include="Configuration\HostConfigurators\CommandConfigurator.cs" />
-    <Compile Include="Configuration\HostConfigurators\CommandLineConfigurator.cs" />
-    <Compile Include="Configuration\HostConfigurators\CommandLineDefinitionConfigurator.cs" />
-    <Compile Include="Configuration\HostConfigurators\CommandLineSwitchConfigurator.cs" />
-    <Compile Include="Configuration\HelpHostConfiguratorExtensions.cs" />
-    <Compile Include="Configuration\HostConfigurators\PrefixHelpTextHostConfigurator.cs" />
-    <Compile Include="Configuration\HostConfigurators\CommandLineParserOptions.cs" />
-    <Compile Include="Configuration\Configurators\ConfigurationResult.cs" />
-    <Compile Include="Configuration\Configurators\ValidateConfigurationResult.cs" />
-    <Compile Include="Configuration\Configurators\Configurator.cs" />
-    <Compile Include="Configuration\Configurators\ValidateResult.cs" />
-    <Compile Include="Configuration\Configurators\ValidationResultDisposition.cs" />
-    <Compile Include="Configuration\Configurators\ValidationResultExtensions.cs" />
-    <Compile Include="Configuration\Configurators\ValidateResultImpl.cs" />
-    <Compile Include="Configuration\Constants\KnownServiceNames.cs" />
-    <Compile Include="Configuration\Credentials.cs" />
-    <Compile Include="Configuration\DependencyExtensions.cs" />
-    <Compile Include="Configuration\HostConfigurators\DependencyHostConfigurator.cs" />
-    <Compile Include="Configuration\HostConfigurators\EnvironmentBuilderFactory.cs" />
-    <Compile Include="Configuration\HostConfigurators\RunAsVirtualAccountHostConfigurator.cs" />
-    <Compile Include="Configuration\HostConfigurators\SystemOnlyHelpHostConfigurator.cs" />
-    <Compile Include="Configuration\HostConfigurators\HostBuilderConfigurator.cs" />
-    <Compile Include="Configuration\HostConfigurators\HostBuilderFactory.cs" />
-    <Compile Include="Configuration\HostConfigurators\HostConfigurator.cs" />
-    <Compile Include="Configuration\HostConfigurators\HostConfiguratorImpl.cs" />
-    <Compile Include="Configuration\HostConfigurators\InstallHostConfiguratorAction.cs" />
-    <Compile Include="Configuration\HostConfigurators\RunAsUserHostConfigurator.cs" />
-    <Compile Include="Configuration\HostConfigurators\RunAsServiceAccountHostConfigurator.cs" />
-    <Compile Include="Configuration\HostConfigurators\RunHostConfiguratorAction.cs" />
-    <Compile Include="Configuration\HostConfigurators\ServiceBuilderFactory.cs" />
-    <Compile Include="Configuration\HostConfigurators\ServiceRecoveryHostConfigurator.cs" />
-    <Compile Include="Configuration\HostConfigurators\StartConfigurator.cs" />
-    <Compile Include="Configuration\HostConfigurators\StartModeHostConfigurator.cs" />
-    <Compile Include="Configuration\HostConfigurators\SudoConfigurator.cs" />
-    <Compile Include="Configuration\HostConfigurators\UninstallHostConfiguratorAction.cs" />
-    <Compile Include="Configuration\HostConfigurators\UnknownCommandLineOptionHostConfigurator.cs" />
-    <Compile Include="Configuration\Options\AutostartOption.cs" />
-    <Compile Include="Configuration\Options\CommandOption.cs" />
-    <Compile Include="Configuration\Options\LocalSystemOption.cs" />
-    <Compile Include="Configuration\Options\DelayedOption.cs" />
-    <Compile Include="Configuration\Options\DisabledOption.cs" />
-    <Compile Include="Configuration\Options\DisplayNameOption.cs" />
-    <Compile Include="Configuration\Options\HelpOption.cs" />
-    <Compile Include="Configuration\Options\InstallOption.cs" />
-    <Compile Include="Configuration\Options\InstanceOption.cs" />
-    <Compile Include="Configuration\Options\InteractiveOption.cs" />
-    <Compile Include="Configuration\Options\LocalServiceOption.cs" />
-    <Compile Include="Configuration\Options\ManualStartOption.cs" />
-    <Compile Include="Configuration\Options\NetworkServiceOption.cs" />
-    <Compile Include="Configuration\Options\Option.cs" />
-    <Compile Include="Configuration\Options\RunOption.cs" />
-    <Compile Include="Configuration\Options\ServiceAccountOption.cs" />
-    <Compile Include="Configuration\Options\ServiceDescriptionOption.cs" />
-    <Compile Include="Configuration\Options\SystemOnlyHelpOption.cs" />
-    <Compile Include="Configuration\Options\ServiceNameOption.cs" />
-    <Compile Include="Configuration\Options\StartOption.cs" />
-    <Compile Include="Configuration\Options\StopOption.cs" />
-    <Compile Include="Configuration\Options\SudoOption.cs" />
-    <Compile Include="Configuration\Options\UninstallOption.cs" />
-    <Compile Include="Configuration\Options\UnknownOption.cs" />
-    <Compile Include="Configuration\ServiceConfiguratorExtensions.cs" />
-    <Compile Include="Configuration\ServiceConfigurators\ControlServiceConfigurator.cs" />
-    <Compile Include="Configuration\ServiceConfigurators\ServiceConfiguratorBase.cs" />
-    <Compile Include="Configuration\ServiceRecoveryConfigurator.cs" />
-    <Compile Include="Configuration\ServiceRecoveryConfiguratorExtensions.cs" />
-    <Compile Include="Configuration\TestHostExtensions.cs" />
-    <Compile Include="Exceptions\ServiceBuilderException.cs" />
-    <Compile Include="Exceptions\ServiceControlException.cs" />
-    <Compile Include="HostFactory.cs" />
-    <Compile Include="Configuration\ServiceEventConfiguratorExtensions.cs" />
-    <Compile Include="Configuration\InstallHostConfiguratorExtensions.cs" />
-    <Compile Include="Configuration\RunAsExtensions.cs" />
-    <Compile Include="Configuration\ServiceConfigurators\ServiceConfigurator.cs" />
-    <Compile Include="Configuration\ServiceConfigurators\DelegateServiceConfigurator.cs" />
-    <Compile Include="Configuration\ServiceExtensions.cs" />
-    <Compile Include="Configuration\StartModeExtensions.cs" />
-    <Compile Include="Configuration\UninstallHostConfiguratorExtensions.cs" />
-    <Compile Include="Exceptions\HostConfigurationException.cs" />
-    <Compile Include="Exceptions\TopshelfException.cs" />
-    <Compile Include="Host.cs" />
-    <Compile Include="HostControl.cs" />
-    <Compile Include="HostStartContext.cs" />
-    <Compile Include="HostStartedContext.cs" />
-    <Compile Include="HostStopContext.cs" />
-    <Compile Include="HostStoppedContext.cs" />
-    <Compile Include="Hosts\CommandHost.cs" />
-    <Compile Include="Hosts\ConsoleRunHost.cs" />
-    <Compile Include="Hosts\HelpHost.cs" />
-    <Compile Include="Hosts\InstallHost.cs" />
-    <Compile Include="Hosts\StartHost.cs" />
-    <Compile Include="Hosts\StopHost.cs" />
-    <Compile Include="Hosts\TestHost.cs" />
-    <Compile Include="Hosts\UninstallHost.cs" />
-    <Compile Include="Logging\HostLoggerConfigurator.cs" />
-    <Compile Include="Logging\LogWriter.cs" />
-    <Compile Include="Logging\LogWriterFactory.cs" />
-    <Compile Include="Logging\HostLogger.cs" />
-    <Compile Include="Logging\LoggingLevel.cs" />
-    <Compile Include="Logging\LogWriterOutputProvider.cs" />
-    <Compile Include="Logging\TopshelfConsoleTraceListener.cs" />
-    <Compile Include="Logging\TraceHostLoggerConfigurator.cs" />
-    <Compile Include="Logging\TraceLogWriter.cs" />
-    <Compile Include="Logging\TraceLogWriterFactory.cs" />
-    <Compile Include="Logging\TypeExtensions.cs" />
-    <Compile Include="Logging\TypeNameFormatter.cs" />
-    <Compile Include="PowerEventCode.cs" />
-    <Compile Include="Runtime\EventCallbackList.cs" />
-    <Compile Include="Runtime\HostEnvironment.cs" />
-    <Compile Include="Runtime\HostStartMode.cs" />
-    <Compile Include="Runtime\InstallHostSettings.cs" />
-    <Compile Include="Runtime\HostSettings.cs" />
-    <Compile Include="Runtime\ServiceEvents.cs" />
-    <Compile Include="Runtime\ServiceEventsImpl.cs" />
-    <Compile Include="Runtime\ServiceFactory.cs" />
-    <Compile Include="Runtime\ServiceHandle.cs" />
-    <Compile Include="Runtime\Windows\HostInstaller.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="Runtime\Windows\HostServiceInstaller.cs" />
-    <Compile Include="Runtime\Windows\Kernel32.cs" />
-    <Compile Include="Runtime\Windows\NativeMethods.cs" />
-    <Compile Include="Runtime\Windows\RestartServiceRecoveryAction.cs" />
-    <Compile Include="Runtime\Windows\RestartSystemRecoveryAction.cs" />
-    <Compile Include="Runtime\Windows\RunProgramRecoveryAction.cs" />
-    <Compile Include="Runtime\Windows\SafeTokenHandle.cs" />
-    <Compile Include="Runtime\Windows\SCMHandle.cs" />
-    <Compile Include="Runtime\Windows\ServiceRecoveryAction.cs" />
-    <Compile Include="Runtime\Windows\ServiceRecoveryOptions.cs" />
-    <Compile Include="Runtime\Windows\WindowsHostEnvironment.cs" />
-    <Compile Include="Runtime\Windows\WindowsHostEnvironmentBuilder.cs" />
-    <Compile Include="Runtime\Windows\WindowsHostSettings.cs" />
-    <Compile Include="Runtime\Windows\WindowsServiceRecoveryController.cs" />
-    <Compile Include="Runtime\Windows\WindowsServiceHost.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="Runtime\Windows\WindowsUserAccessControl.cs" />
-    <Compile Include="ServiceControl.cs" />
-    <Compile Include="ServiceCustomCommand.cs" />
-    <Compile Include="ServicePowerEvent.cs" />
-    <Compile Include="ServiceSessionChange.cs" />
-    <Compile Include="ServiceShutdown.cs" />
-    <Compile Include="ServiceSuspend.cs" />
-    <Compile Include="PowerEventArguments.cs" />
-    <Compile Include="SessionChangedArguments.cs" />
-    <Compile Include="SessionChangeReasonCode.cs" />
-    <Compile Include="TopshelfExitCode.cs" />
+    <EmbeddedResource Include="HelpText.txt"/>
   </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="HelpText.txt" />
-  </ItemGroup>
-  <ItemGroup />
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
