--- a/src/Topshelf.Log4Net/Topshelf.Log4Net.csproj
+++ b/src/Topshelf.Log4Net/Topshelf.Log4Net.csproj
@@ -12,6 +12,8 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="log4net" Version="2.0.8" />
+  </ItemGroup>
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net452' ">
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml" />
